--- a/Diagrama_entidad_relacion.html
+++ b/Diagrama_entidad_relacion.html
@@ -118,13 +118,24 @@
 	<section>
 	
 		<article>
-		<p>Te damos la bienvenida al OVI Construcción de Bases de Datos Relacionales. En este espacio aprenderás los temas y habilidades mínimas para la construcción de un modelo lógico de datos, aplicado a las bases de datos relacionales</p>
-	
+		<p>Diagrama entidad relación: Las entidades son representadas por el siguiente símbolo:</p>
+		<p>El primer recuadro este representado por el nombre de la entidad.</p>
+		<p>En el segundo recuadro esta presentado por el o los nombres de los atributos</p>
+		<img src="img/entidad.png">
 	  </article>
 	
 		<article>
-		<p>	Con esta información analizaras un problema, identificaras las entidades, indagaras de cuáles son las posibles relaciones que existen entre entidades y cuales se pueden ajustar a las necesidades de tu proyecto o trabajo, generaras el modelo lógico de datos con sus respectivos atributos.</p>
-	
+		<p>Deacuerdo al tipo de relaciones que se presenten en el problema se colocan las respectivas relaciones 
+		teniendo en cuenta su cardinalidad</p>
+		
+		<p>Simbolo uno a muchos</p>
+		
+		<img src="img/simbolo_uno_a_muchos.jpg">
+		
+		<p>Simbolo uno a uno</p>
+		<img src="img/simbolo_uno_a_uno.png">
+		
+		
 		</article>
 		
 		
