--- a/Que_es_una_base_de_datos_relacional.html
+++ b/Que_es_una_base_de_datos_relacional.html
@@ -50,8 +50,8 @@
 					<ul>
 						<li><a href="Que_es_una_base_de_datos_relacional.html">Que es una base de datos relacional</a></li>
 						<li><a href="TIpos_relaciones.html">Tipos de relaciones</a></li>
-						<li><a href="index.html">Que es un modelo entidad relación</a></li>
-						<li><a href="index.html">Diagrama entidad relación.</a></li>
+						<li><a href="">Que es un modelo entidad relación</a></li>
+						<li><a href="Diagrama_entidad_relacion.html">Diagrama entidad relación.</a></li>
 					</ul>
 				
 				
