--- a/video_1.html
+++ b/video_1.html
@@ -119,24 +119,14 @@
 	<section>
 	
 		<article>
-		<p></p>
+		<p>En este video se da una pequeña introduccion al trabajo con el modelo logico de datos</p>
 	
 	  </article>
 	
-		<article>
-		
-
-	<p>Para el análisis de un problema es necesario leer detenidamente que es lo que quiere el usuario final de una base de datos e identificar las entidades con sus atributos.</p>
+		<article1>
+		<iframe margin-left= "100px" width="560" height="315"   src="https://www.youtube.com/embed/KoAEIk9yWao" frameborder="0" allowfullscreen></iframe>
 	
-	<p>La empresa Latin Gamer se encarga de trabajar en la creación de videojuegos, cuenta con varios empleados divididos en diferentes departamentos, departamento de diseño, departamento de sonido y departamento programación.</p>
-	
-	
-	<p>Cada departamento tiene una clave con su respectivo nombre y cada departamento cuenta con cierta cantidad de empleados, un empleado no puede trabajar en dos departamentos.</p>
-	<p>Para que los empleados puedan trabajar se ha dado a cada empleado una clave de acceso para trabajar con los recursos como son programas y equipo informatico.</p>
-	<p>Así mismo cada empleado puede trabajar en la creación de distintos juegos, cada juego tiene un nombre único y código. Cada juego puede tener varios empleados y un empleado puede trabajar en el desarrollo de varios juegos.</p>
-	<p>La empresa requiere una base de datos donde se puede almacenar la información de los empleados como es su identificación, nombre, apellido, departamento en el cual trabaja y el juego en el que está trabajando.</p>
-	
-		</article>
+		</article1>
 		
 		
 		
@@ -165,3 +155,4 @@
 
 
 </html>
+
