--- a/TIpos_relaciones.html
+++ b/TIpos_relaciones.html
@@ -66,7 +66,7 @@
 				<li><a href="index.html">MULTIMEDIA</a>
 				
 					<ul>
-						<li><a href="index.html">SUBPAGINA 1</a></li>
+						<li><a href="video_1.html">Video 1</a></li>
 						<li><a href="index.html">SUBPAGINA 2</a></li>
 						<li><a href="index.html">SUBPAGINA 3</a></li>
 						<li><a href="index.html">SUBPAGINA 4</a></li>
