--- a/video_1.html
+++ b/video_1.html
@@ -104,12 +104,18 @@
 	
 		<aside>
 		
-		<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over <a href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>. <a href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a> <a href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a> <a href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a></p>&mdash; US Dept of Interior (@Interior) <a href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May 5, 2014</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+		
+		<object allowscriptaccess="always" type="application/x-shockwave-flash" data="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" width="175" height="200" wmode="transparent"><param name="allowscriptaccess" value="always" /><param name="movie" value="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" /><param name="wmode" value="transparent" /><embed src="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" type="application/x-shockwave-flash" allowscriptaccess="always" wmode="transparent" width="175" height="200" /><video width="175" height="200"><a style="font-size:110%;font-style:normal" href="http://www.為替.tv/xemarketsall.html">www.為替.tv</a></video></object>
+		
+			
+	
+		
+		<a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		
 		<blockquote>primer elemento 111 11 1111111111111111 </blockquote>
 		<blockquote>segundo elemento 2 2 2 2 2 2 </blockquote>
 		<blockquote>tercer elemento 33333 </blockquote>
-		
+			
 		
 		</aside>
 	
@@ -121,12 +127,12 @@
 		<article>
 		<p>En este video se da una pequeña introduccion al trabajo con el modelo logico de datos</p>
 	
-	  </article>
-	
-		<article1>
-		<iframe margin-left= "100px" width="560" height="315"   src="https://www.youtube.com/embed/KoAEIk9yWao" frameborder="0" allowfullscreen></iframe>
-	
-		</article1>
+			</article>
+		
+		<div id="video1">
+		<iframe  width="560" height="315"   src="https://www.youtube.com/embed/KoAEIk9yWao" frameborder="0" allowfullscreen></iframe>
+		</div>
+		
 		
 		
 		
@@ -142,7 +148,7 @@
 	
 
 	
-	<div>
+	<div id="footer">
 		<footer>
 		aqui va el footer
 		</footer>
