--- a/Autores.html
+++ b/Autores.html
@@ -114,9 +114,6 @@
 		
 		<a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		
-		<blockquote>primer elemento 111 11 1111111111111111 </blockquote>
-		<blockquote>segundo elemento 2 2 2 2 2 2 </blockquote>
-		<blockquote>tercer elemento 33333 </blockquote>
 		
 		
 		</aside>
@@ -155,7 +152,7 @@
 	
 	<div>
 		<footer>
-		aqui va el footer
+		Curso Diseño De Sitios Web UNAD   Grupo 	301122_24
 		</footer>
 	</div>
 	
