--- a/Que_es_modelo_entidad_relacion.html
+++ b/Que_es_modelo_entidad_relacion.html
@@ -111,12 +111,8 @@
 	
 		
 		<a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		
-		<blockquote>primer elemento 111 11 1111111111111111 </blockquote>
-		<blockquote>segundo elemento 2 2 2 2 2 2 </blockquote>
-		<blockquote>tercer elemento 33333 </blockquote>
-		
-		
+	
+	
 		</aside>
 	
 	</div>
@@ -150,7 +146,7 @@
 	
 	<div>
 		<footer>
-		aqui va el footer
+		Curso Diseño De Sitios Web UNAD   Grupo 	301122_24
 		</footer>
 	</div>
 	
