--- a/Que_es_una_base_de_datos_relacional.html
+++ b/Que_es_una_base_de_datos_relacional.html
@@ -113,9 +113,7 @@
 		<a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		
 		
-		<blockquote>primer elemento 111 11 1111111111111111 </blockquote>
-		<blockquote>segundo elemento 2 2 2 2 2 2 </blockquote>
-		<blockquote>tercer elemento 33333 </blockquote>
+		
 		
 		
 		</aside>
@@ -187,9 +185,7 @@ La información se guarda en tablas compuestas por columnas y filas, en cada col
 	<div>
 		<footer>
 		
-		aqui va el footer
-		<p>aaaaaaaaaaaaaa</p>
-		<p>bbbbbbbbbbbbbbbb</p>
+		Curso Diseño De Sitios Web UNAD   Grupo 	301122_24
 		</footer>
 	</div>
 	
