--- a/TIpos_relaciones.html
+++ b/TIpos_relaciones.html
@@ -119,13 +119,7 @@
 		
 		<a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		
-		
-		
-		<blockquote>primer elemento 111 11 1111111111111111 </blockquote>
-		<blockquote>segundo elemento 2 2 2 2 2 2 </blockquote>
-		<blockquote>tercer elemento 33333 </blockquote>
-		
-		
+	
 		</aside>
 	
 	</div>
@@ -190,9 +184,7 @@ Este tipo de relación se usa cuando un elemento de una entidad puede ser asigna
 	<div>
 		<footer>
 		
-		aqui va el footer
-		<p>aaaaaaaaaaaaaa</p>
-		<p>bbbbbbbbbbbbbbbb</p>
+		Curso Diseño De Sitios Web UNAD   Grupo 	301122_24
 		</footer>
 	</div>
 	
