--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				
 					<ul>
 						<li><a href="anaslisi_problema.html">Análisis Problema</a></li>
-						<li><a href="index.html">SUBPAGINA 2</a></li>
+						<li><a href="Actividad_1.html">Actividad 1</a></li>
 						<li><a href="index.html">SUBPAGINA 3</a></li>
 						<li><a href="index.html">SUBPAGINA 4</a></li>
 					</ul>
@@ -106,7 +106,7 @@
 	
 		<aside>
 		
-		<object allowscriptaccess="always" type="application/x-shockwave-flash" data="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" width="175" height="200" wmode="transparent"><param name="allowscriptaccess" value="always" /><param name="movie" value="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" /><param name="wmode" value="transparent" /><embed src="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" type="application/x-shockwave-flash" allowscriptaccess="always" wmode="transparent" width="175" height="200" /><video width="175" height="200"><a style="font-size:110%;font-style:normal" href="http://www.為替.tv/xemarketsall.html">www.為替.tv</a></video></object>
+		<object allowscriptaccess="always" type="application/x-shockwave-flash" data="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" width="200" height="200" wmode="transparent"><param name="allowscriptaccess" value="always" /><param name="movie" value="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" /><param name="wmode" value="transparent" /><embed src="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" type="application/x-shockwave-flash" allowscriptaccess="always" wmode="transparent" width="175" height="200" /><video width="175" height="200"><a style="font-size:110%;font-style:normal" href="http://www.為替.tv/xemarketsall.html">www.為替.tv</a></video></object>
 		
 			
 	
