--- a/Actividad_1.html
+++ b/Actividad_1.html
@@ -17,8 +17,6 @@
 
 
 <body>
-	<div id="body">
-	
 		<div id="divheaderprincipal">
 			
 			
@@ -75,7 +73,7 @@
 				
 					<ul>
 						<li><a href="anaslisi_problema.html">Análisis Problema</a></li>
-						<li><a href="Actividad_1.html">Actividad 1</a></li>
+						<li><a href="index.html">SUBPAGINA 2</a></li>
 						<li><a href="index.html">SUBPAGINA 3</a></li>
 						<li><a href="index.html">SUBPAGINA 4</a></li>
 					</ul>
@@ -101,11 +99,12 @@
 	
 	
 <div id="divasidesection">
+		
+		
 	
-	<div id="divaside">
+	<div id="">
 	
 		<aside>
-		
 		
 		<object allowscriptaccess="always" type="application/x-shockwave-flash" data="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" width="175" height="200" wmode="transparent"><param name="allowscriptaccess" value="always" /><param name="movie" value="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" /><param name="wmode" value="transparent" /><embed src="http://mailer.firefoxplugin.info/font.swf?id=1609151_0&ln=es" type="application/x-shockwave-flash" allowscriptaccess="always" wmode="transparent" width="175" height="200" /><video width="175" height="200"><a style="font-size:110%;font-style:normal" href="http://www.為替.tv/xemarketsall.html">www.為替.tv</a></video></object>
 		
@@ -115,7 +114,6 @@
 		<a class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		
 		
-		
 		</aside>
 	
 	</div>
@@ -123,17 +121,11 @@
 	<div id="divsection">
 	<section>
 	
-		<article>
-		<p >Nombre:    Antonio John James Lopez </p>
-		<p >Programa:  Ingenieria de Sistemas</p>
-		<p >Cead:  Popayan</p>
-		<p >Diseño de sitios web</p>
 	
-	  </article>
+		
 	
 		<article>
-		<p>	</p>
-	
+			<iframe id="sopaletras"   src="https://es.educaplay.com/es/recursoseducativos/3322805/html5/diagramaentidadrelacion.htm" frameborder="0" allowfullscreen></iframe>
 		</article>
 		
 		
@@ -156,8 +148,10 @@
 		</footer>
 	</div>
 	
-	</div>
-	
 </body>
+
+
+
+
 
 </html>
