--- a/TIpos_relaciones.html
+++ b/TIpos_relaciones.html
@@ -78,7 +78,7 @@
 				
 					<ul>
 						<li><a href="anaslisi_problema.html">Análisis Problema</a></li>
-						<li><a href="index.html">SUBPAGINA 2</a></li>
+						<li><a href="Actividad_1.html">Actividad 1</a></li>
 						<li><a href="index.html">SUBPAGINA 3</a></li>
 						<li><a href="index.html">SUBPAGINA 4</a></li>
 					</ul>
