--- a/Actividad_1.html
+++ b/Actividad_1.html
@@ -73,8 +73,8 @@
 				
 					<ul>
 						<li><a href="anaslisi_problema.html">Análisis Problema</a></li>
-						<li><a href="index.html">SUBPAGINA 2</a></li>
-						<li><a href="index.html">SUBPAGINA 3</a></li>
+						<li><a href="Actividad_1.html">Actividad 1</a></li>
+						<li><a href="Actividad_2.html">Actividad 2</a></li>
 						<li><a href="index.html">SUBPAGINA 4</a></li>
 					</ul>
 				
