--- a/Actividad_2.html
+++ b/Actividad_2.html
@@ -122,13 +122,9 @@
 	<section>
 	
 		<article>
-		<p>Te damos la bienvenida al OVI Construcción de Bases de Datos Relacionales. En este espacio aprenderás los temas y habilidades mínimas para la construcción de un modelo lógico de datos, aplicado a las bases de datos relacionales</p>
-	
-	  </article>
-	
-		<article>
-		<p>	Con esta información analizaras un problema, identificaras las entidades, indagaras de cuáles son las posibles relaciones que existen entre entidades y cuales se pueden ajustar a las necesidades de tu proyecto o trabajo, generaras el modelo lógico de datos con sus respectivos atributos.</p>
-	
+			
+			<iframe id="sopaletras"   src="https://es.educaplay.com/es/recursoseducativos/3324262/html5/relacionar.htm" frameborder="0" allowfullscreen></iframe>
+			
 		</article>
 		
 		
