--- a/video_1.html
+++ b/video_1.html
@@ -74,7 +74,7 @@
 					<ul>
 						<li><a href="anaslisi_problema.html">Análisis Problema</a></li>
 						<li><a href="Actividad_1.html">Actividad 1</a></li>
-						<li><a href="index.html">SUBPAGINA 3</a></li>
+						<li><a href="Actividad_2.html">Actividad 2</a></li>
 						<li><a href="index.html">SUBPAGINA 4</a></li>
 					</ul>
 				
@@ -128,7 +128,7 @@
 			</article>
 		
 		<div id="video1">
-		<iframe  width="560" height="315"   src="https://www.youtube.com/embed/KoAEIk9yWao" frameborder="0" allowfullscreen></iframe>
+		<iframe  width="auto" height="auto"   src="https://www.youtube.com/embed/KoAEIk9yWao" frameborder="0" allowfullscreen></iframe>
 		</div>
 		
 		
