--- a/pasos_crear_modelo_entidad_relacion.html
+++ b/pasos_crear_modelo_entidad_relacion.html
@@ -74,7 +74,7 @@
 					<ul>
 						<li><a href="anaslisi_problema.html">Análisis Problema</a></li>
 						<li><a href="Actividad_1.html">Actividad 1</a></li>
-						<li><a href="index.html">SUBPAGINA 3</a></li>
+						<li><a href="Actividad_2.html">Actividad 2</a></li>
 						<li><a href="index.html">SUBPAGINA 4</a></li>
 					</ul>
 				
@@ -132,10 +132,7 @@
 	
 	  </article>
 	
-		<article>
-		<p>	Con </p>
-	
-		</article>
+		
 		
 		
 		
