--- a/Que_es_una_base_de_datos_relacional.html
+++ b/Que_es_una_base_de_datos_relacional.html
@@ -5,18 +5,25 @@
 <head>
 <meta charset="utf-8">
 <meta name ="viewport"  content= "width = device-width, user-scalable = no, initial-scale=1.0, maximum-sacale-1.0, minimum-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Que es una base de datos relacional</title>
-
-
 <link href="css/normalize.css" rel="stylesheet" type="text/css">
 <link href="css/estilos.css" rel="stylesheet" type="text/css">
-
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 </head>
 
 
 
 
 <body>
+		<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
 		<div id="divheaderprincipal">
 			
 			
